# moja.colombia

./: .gitignore
data/: process_forest.py
docker/: Dockerfile  Makefile
documentation/: Set-Up and Running FLINT OS.md
run_envs/: blocks_json.sql  build.sh  create_blocks.sql  create_departamentos_csv.sql  create_flux_report_view.sql  create_forest_types.sql  create_forestales_blocks.sql  create_forestales_csv.sql  create_stock_report_view.sql  database.sqlite  docker-compose.yml  docker_run.sh  growth_mai.json  growth_mai_libs.json  growth_mai_point.json  growth_mai_provider.json  growth_mai_test_block.json  merge_geotiffs.py  run.sh  run_debug.cmd  run_release.cmd
run_envs/Debug/: libs.win.json
run_envs/Release/: libs.win.json
run_envs/sqlite/: create_departamentos.sql  create_forestales_2020.sql  create_stock_report_view.sql
source/: .clang-format  CMakeLists.txt
source/moja.modules.growth_mai/: CMakeLists.txt
source/moja.modules.growth_mai/include/moja/modules/growth_mai/: aggregatorerror.h  aggregatorlandunit.h  buildlandunitmodule.h  commondata.h  disturbanceeventmodule.h  disturbanceevents.h  forestevents.h  forestgrowthmodule.h  foresttype.h  foresttypestransform.h  landunitsqlitewriter.h  libraryfactory.h  record.h  runstatistics.h  simulationunitdata.h  systemsettings.h
source/moja.modules.growth_mai/src/: aggregatorerror.cpp  aggregatorlandunit.cpp  buildlandunitmodule.cpp  commondata.cpp  disturbanceeventmodule.cpp  forestevents.cpp  forestgrowthmodule.cpp  foresttype.cpp  foresttypestransform.cpp  landunitsqlitewriter.cpp  libraryfactory.cpp  record.cpp  runstatistics.cpp
source/moja.modules.growth_mai/tests/: CMakeLists.txt
source/moja.modules.growth_mai/tests/src/: growthmoduletests.cpp
source/templates/: exports.h
